[tool.poetry]
name = "back"
version = "0.1.0"
description = "Backend part for unitrip.ru"
authors = ["Exilon"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.20.0"
sqlalchemy = "^1.4.44"
pydantic = "^1.10.2"
gunicorn = "^20.1.0"
fastapi = "^0.87.0"
passlib = "^1.7.4"
fastapi-jwt-auth = "^0.5.0"
psycopg2 = "^2.9.5"
email-validator = "^1.3.0"
flake8 = "^5.0.4"
alembic = "^1.8.1"
python-dotenv = "^0.21.0"
asyncpg = "^0.27.0"
aiobotocore = "^2.4.0"
loguru = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
